--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -1,2 +1,33 @@
 <html>
+    <head>
+        <title>
+            Article One | shreyasi
+        </title>
+    </head>
+    <body>
+        <div>
+            <a href="/">Home></a>
+        </div>
+        <hr/>
+        <h3>
+            Article one
+        </h3>
+        <div>
+            Sep 5 2016
+        </div>
+        <div>
+           <p>
+                this is the content for my first article.this is the content for my first article.
+                this is the content for my first article.this is the content for my first article.this is the content for my first article.
+            </p>
+             <p>
+                this is the content for my first article.this is the content for my first article.
+                this is the content for my first article.this is the content for my first article.this is the content for my first article.
+            </p>
+             <p>
+                this is the content for my first article.this is the content for my first article.
+                this is the content for my first article.this is the content for my first article.this is the content for my first article.
+            </p>
+        </div>
+    </body>
 </html>
