[imad-console] Updates ui/article-three.html

--- a/ui/article-three.html
+++ b/ui/article-three.html
@@ -4,9 +4,18 @@
             Article Three | shreyasi
         </title>
         <meta name ="viewport" content="width-device-width, initial-scale=1" />
+        <style>
+            .container {
+                max-width: 800px;
+                margin: 0 auto;
+                color: grey;
+                font-family: sans-serif;
+            }
+        </style>
     </head>
     <body>
-        <div>
+        <div class="container">
+     <div>
             <a href="/">Home></a>
         </div>
         <hr/>
@@ -21,6 +30,7 @@
                 this is the content for my third article.
             </p>
              
+        </div>
         </div>
     </body>
 </html>
