[imad-console] Updates ui/article-two.html

--- a/ui/article-two.html
+++ b/ui/article-two.html
@@ -4,8 +4,21 @@
             Article Two | shreyasi
         </title>
         <meta name ="viewport" content="width-device-width, initial-scale=1" />
+         <style>
+            .container {
+    max-width: 800px;
+    margin: 0 auto;
+    color: darkgreen;
+    font-family: sans-serif;
+    padding-top: 60px;
+    padding-left: 20px;
+    padding-right: 20px;
+
+            }
+        </style>
     </head>
     <body>
+         <div class="container">
         <div>
             <a href="/">Home></a>
         </div>
@@ -21,7 +34,7 @@
                 this is the content for my second article.
              
             </p>
-             
+             </div>
         </div>
     </body>
 </html>
