[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -27,6 +27,9 @@ i have made some new local changes.
 
 
         </div>
+        <script>
+            alert('Hi,i am java script');
+        </script>
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
