[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,22 +4,25 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
+        <div class="container">
         <div class="center">
-            <img id = 'madi' src="/ui/madi.png" class="img-medium"/>
+            <img id = 'madi' src="http://14.139.227.202/iisermcc/images/iiser/pic1.JPG" class="img-medium"/>
         </div>
+        <hr/>
         <br>
-        <div class="center text-big bold" id="main-text">
-            Hi! I am shreyasi.this is my first web app.
-
-
-
-
-
-
-<h4>i am a new headind</h4>
-
-B
-i have made some new local changes.
+        <h3>personal</h3>
+        <div>
+            hi my name is shreyasi
+            </div>
+            <hr/>
+            <h3>professional</h3>
+    <div>
+        i am a student
+    </div>
+<hr/>
+<div class="footer">
+    
+</div>
 
 
 
@@ -27,9 +30,7 @@ i have made some new local changes.
 
 
         </div>
-        <script>
-            alert('Hi,i am java script');
-        </script>
+     
         <script type="text/javascript" src="/ui/main.js">
         </script>
     </body>
